changed coursebox to accept a native url from external sources

--- a/SiliconBackOffice/SiliconBackOffice/Components/Pages/Partials/Courses/_CoursesBox.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/Pages/Partials/Courses/_CoursesBox.razor
@@ -6,7 +6,7 @@ else
 {
     <div class="grid-item card">
         <div class="img-wrapper">
-            <img class="_course-image" src="/img/courses/@_course.ImageUri" alt="@_course.AltText">
+            <img class="_course-image" src="@_course.ImageUri" alt="@_course.AltText">
             <p class="@(_course.BestSeller ? "best-seller" : "hidden")">Best Seller</p>
         </div>
         <div class="bookmark-circle">
