--- a/SiliconBackOffice/SiliconBackOffice/Components/Pages/Partials/Courses/_CoursesBox.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/Pages/Partials/Courses/_CoursesBox.razor
@@ -26,11 +26,11 @@ else
                     foreach (var author in _course.Authors)
                     {
                         <span class="author">@author.Name</span>
-                        i++;
-                        if (_course.Authors.Count() != i)
+                        if (i == 0 && !String.IsNullOrEmpty(_course.Authors[1].Name))
                         {
                             <span> & </span>
                         }
+                        i++;
                     }
                 }
                 <div class="price-wrapper">
