--- a/SiliconBackOffice/SiliconBackOffice/Components/Pages/SavedCourses.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/Pages/SavedCourses.razor
@@ -7,68 +7,64 @@
 <PageTitle>Saved Courses</PageTitle>
 
 <h1>Saved courses</h1>
+    <EditForm Model="@_email">
+        <ChildContent>
+            <div class="find-email-find">
+                <label>Type in user email to find your courses</label>
+                <div class="find-email-find-input">
+                    <InputText @bind-Value="_email.Email" />
+                <button class="btn-theme" @onclick=" () => HandleUserEmail(_email.Email)"><i class="fa-solid fa-magnifying-glass"></i> Find user</button>
+                </div>
+            </div>
 
-<EditForm Model="@_email">
-    <ChildContent>
-        <div class="find-email">
-            <label>Type in user email to find your courses</label>
-            <InputText @bind-Value="_email.Email" />
-            <button class="btn-theme" @onclick=" () => HandleUserEmail(_email.Email)">Find user</button>
-        </div>
-        
-    </ChildContent>
-</EditForm>
+        </ChildContent>
+    </EditForm>
 
-<EditForm Model="_createSavedCourse">
-    <ChildContent>
-        <div class="find-email">
-            <label>Email</label>
-            <InputText @bind-Value="_createSavedCourse.Email" />
 
-        </div>
-        <div class="find-email">
-            @if (_courses != null)
-            {
-                <InputSelect @bind-Value="_createSavedCourse.CourseId">
-                    <option value="">-- Select a Course --</option>
-                    @foreach (var course in _courses)
+
+    <EditForm Model="_createSavedCourse" class="find-email-select">
+        <ChildContent>
+            <div class="find-email-select-input">
+            <label>Type in user email to edit courses</label>
+                <div class="find-email">
+                    <label>Email</label>
+                    <InputText @bind-Value="_createSavedCourse.Email" />
+                </div>
+                <div class="find-email">
+                    @if (_courses != null)
                     {
-                        <option value="@course.Id">@course.Title</option>
+                        <InputSelect class="dropdown" @bind-Value="_createSavedCourse.CourseId">
+                            <option value="">-- Select a Course --</option>
+                            @foreach (var course in _courses)
+                            {
+                                <option value="@course.Id">@course.Title</option>
+                            }
+                        </InputSelect>
                     }
-                </InputSelect>
-               @*  <InputSelect @bind-Value="_courses">
-                    <option>-- Select a Course --</option>
-                    @foreach (var course in _courses)
-                    {
-                        <option @onclick="() => SelectCourseId(course.Id) ">
-                            @course.Title
-                        </option>
-                    }
-                </InputSelect> *@
-            }
+                    <label>CourseId</label>
+                    <InputText @bind-Value="_createSavedCourse.CourseId" />
+                </div>
+            </div>
+            <div class="find-email-select-checkbox">
+                <div class="find-email">
+                    <label>Is Bookmarked</label>
+                <InputCheckbox class="custom-checkbox" @bind-Value="_createSavedCourse.IsBookmarked" />
 
+                </div>
+                <div class="find-email">
+                    <label>Has Joined</label>
+                <InputCheckbox class="custom-checkbox" @bind-Value="_createSavedCourse.HasJoined" />
 
-            <label>CourseId</label>
-            <InputText @bind-Value="_createSavedCourse.CourseId" />
+                </div>
+            </div>
 
-        </div>
-        <div class="find-email">
-            <label>Is Bookmarked</label>
-            <InputCheckbox @bind-Value="_createSavedCourse.IsBookmarked" />
+            <div class="find-email-select-btn">
+                <button class="btn-theme" @onclick=" () => PopulateCourses(_createSavedCourse.Email)">Populate courses</button>
+                <button class="btn-theme" @onclick=" () => CreateSavedCourse(_createSavedCourse)"><i class="fa-solid fa-plus"></i> Create user</button>
+            </div>
 
-        </div>
-        <div class="find-email">
-            <label>Has Joined</label>
-            <InputCheckbox @bind-Value="_createSavedCourse.HasJoined" />
-
-        </div>
-        <div>
-            <button class="btn-theme" @onclick=" () => PopulateCourses(_createSavedCourse.Email)">Populate courses</button>
-            <button class="btn-theme" @onclick=" () => CreateSavedCourse(_createSavedCourse)">Create user</button>
-        </div>
-        
-    </ChildContent>
-</EditForm>
+        </ChildContent>
+    </EditForm>
 
 
 
@@ -115,17 +111,17 @@ else
                     <div class="checkbox-wrapper">
                         <div class="checkbox-group-form">
                             <label id="bookmark-lable">Bookmarked</label>
-                            <InputCheckbox style="width: 1.5rem; " id="bookmark-input" @bind-Value="savedCourse.IsBookmarked" />
+                            <InputCheckbox class="custom-checkbox" id="bookmark-input" @bind-Value="savedCourse.IsBookmarked" />
                         </div>
                         <div class="checkbox-group-form">
                             <label id="has-joined-label">Has Joined</label>
-                            <InputCheckbox id="has-joined-input" @bind-Value="savedCourse.HasJoined" />
+                            <InputCheckbox class="custom-checkbox" id="has-joined-input" @bind-Value="savedCourse.HasJoined" />
                         </div>
                     </div>
                   
                 </div>
 
-                <button class="btn-theme" @onclick="() => HandleForm(savedCourse)">Save Changes</button>
+                <button class="btn-theme" @onclick="() => HandleForm(savedCourse)"><i class="fa-regular fa-floppy-disk"></i> Save Changes</button>
             </ChildContent>
         </EditForm>
     }
@@ -133,32 +129,10 @@ else
 }
 @code {
     public IEnumerable<SavedCoursesModel>? _savedCourses { get; set; }
-
     public IEnumerable<Course>? _courses { get; set; }
     public ApplicationUser? _user { get; set; }
     public SavedCoursesEmailModel _email { get; set; } = new();
-
     public CreateSavedCourseModel _createSavedCourse { get; set; } = new();
-
-
-    // protected override async Task OnInitializedAsync()
-    // {
-    //     if (_createSavedCourse == null)
-    //     {
-    //         _createSavedCourse = new();
-    //     }
-    //     _user = await _userManager.FindByEmailAsync("bjornandersson84@gmail.com");
-
-    //     if (_user != null)
-    //     {
-    //         _savedCourses = await _savedCoursesService.GetSavedCoursesAsync(_user.Id);
-    //         var result = await _courseService.GetCourseIdAndTitle();
-    //         if (result != null)
-    //         {
-    //             _courses = result.Courses;
-    //         }
-    //     }      
-    // }
 
     private async Task HandleForm(SavedCoursesModel savedCourse)
     {
@@ -170,7 +144,6 @@ else
         {
             var response = await _savedCoursesService.UpdateSavedCourses(savedCourse);
         }
-
     }
 
     private async Task HandleUserEmail(string email)
@@ -206,22 +179,12 @@ else
                 _courses = result!.Courses;
             }
         }
-
     }
 
     private async Task CreateSavedCourse(CreateSavedCourseModel model)
     {
         _user = await _userManager.FindByEmailAsync(model.Email);
-        // var savedCourses = await _savedCoursesService.GetSavedCoursesAsync(_user.Id);
-        // List<string> currentCourses = new List<string>();
 
-        // foreach (var course in savedCourses)
-        // {
-        //     if (course.CourseId == model.CourseId)
-        //     {
-
-        //     }   
-        // }
         if (_user != null && model != null)
         {
             var savedCourseToCreate = new SavedCoursesModel()
