--- a/SiliconBackOffice/SiliconBackOffice/wwwroot/app.css
+++ b/SiliconBackOffice/SiliconBackOffice/wwwroot/app.css
@@ -1091,16 +1091,51 @@ label {
   margin-bottom: 0.5rem;
 }
 
-.find-email {
-  display: flex;
-  align-items: baseline;
-  gap: 1rem;
-  margin-bottom: 2rem;
-}
-.find-email input {
+input {
   border-radius: 0.375rem;
-  width: 25%;
+  width: 50%;
   padding: 0.4rem;
+}
+
+.custom-checkbox {
+  position: relative;
+  width: 20px;
+  height: 20px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  cursor: pointer;
+}
+
+.find-email-find-input button {
+  margin-top: 1rem;
+}
+
+.find-email-select-input {
+  margin-top: 1rem;
+}
+.find-email-select-input .dropdown {
+  width: 50%;
+  margin-top: 1rem;
+  text-align: center;
+  font-weight: 700;
+}
+
+.find-email-select-checkbox {
+  display: flex;
+  align-items: flex-start;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+.find-email-select-checkbox .find-email {
+  display: flex;
+  gap: 10px;
+}
+
+.find-email-select-btn {
+  display: flex;
+  gap: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .saved-courses-form {
@@ -1130,8 +1165,11 @@ label {
   grid-area: checkboxes;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
 }
+.saved-courses-form .form-wrapper-saved-courses .checkbox-wrapper .checkbox-group-form #has-joined-label {
+  margin-top: 1.3rem;
+}
+
 html, body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
