Chat works locally between users. Need to implement ways for it to work with for instance servicebus

--- a/SiliconBackOffice/SiliconBackOffice/Components/_Imports.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/_Imports.razor
@@ -86,3 +86,8 @@
 @inject CourseService _courseService
 @inject NavigationManager navigationManager
 @* @inject SavedCoursesService _savedCoursesService *@
+
+
+@*-----------------------------Chat----------------------------------------*@
+
+@using SiliconBackOffice.Client.Pages.Chat
