--- a/SiliconBackOffice/SiliconBackOffice/Components/Layout/NavMenu.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/Layout/NavMenu.razor
@@ -19,32 +19,38 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="courses">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Courses
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="users">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Users
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="subscribers">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Subscribers
-            </NavLink>
-        </div>
-
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="auth">
-                <span class="bi bi-lock-nav-menu" aria-hidden="true"></span> Auth Required
+            <NavLink class="nav-link" href="chat">
+                <span class="bi bi-chat-dots-fill-nav-menu" aria-hidden="true"></span> Chat
             </NavLink>
         </div>
 
         <AuthorizeView>
             <Authorized>
+
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="courses">
+                        <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Courses
+                    </NavLink>
+                </div>
+
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="users">
+                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Users
+                    </NavLink>
+                </div>
+
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="subscribers">
+                        <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Subscribers
+                    </NavLink>
+                </div>
+
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="auth">
+                        <span class="bi bi-lock-nav-menu" aria-hidden="true"></span> Auth Required
+                    </NavLink>
+                </div>
+
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="Account/Manage">
                         <span class="bi bi-person-fill-nav-menu" aria-hidden="true"></span> @context.User.Identity?.Name
