--- a/SiliconBackOffice/SiliconBackOffice/wwwroot/app.css
+++ b/SiliconBackOffice/SiliconBackOffice/wwwroot/app.css
@@ -1134,6 +1134,122 @@ h6, .h6 {
   margin: 0;
 }
 
+#message-page {
+  display: flex;
+  padding: 0 0 10rem 0;
+}
+#message-page .container {
+  flex-wrap: wrap;
+  gap: 40px;
+}
+@media (min-width: 992px) {
+  #message-page .container {
+    flex-wrap: nowrap;
+    gap: 130px;
+  }
+}
+#message-page .container .chat {
+  width: 100%;
+  margin-top: 30px;
+}
+#message-page .container .bubble-right {
+  text-align: right;
+  background-color: rgba(34, 197, 222, 0.6);
+  margin-left: auto;
+  border-radius: 15px;
+  padding: 10px;
+  max-width: 75%;
+}
+#message-page .container .bubble-left {
+  text-align: left;
+  background-color: rgba(239, 68, 68, 0.768627451);
+  color: var(--color-gray-900);
+  margin-right: auto;
+  border-radius: 15px;
+  padding: 10px;
+  max-width: 75%;
+}
+#message-page .container .message-container {
+  max-height: 60vh;
+  overflow-y: scroll;
+}
+#message-page .container .message-container .list-group {
+  min-height: 100px;
+  padding: 0 0 0 1rem;
+}
+#message-page .container .message-container .list-group .message-user-name {
+  padding: 0 0 0 1rem;
+}
+#message-page .container .message-container .list-group .message-content {
+  color: var(--color-gray-800);
+}
+#message-page .container .card-footer {
+  position: relative;
+  padding: 2rem 1rem;
+}
+#message-page .container .card-footer .typing-user {
+  font-weight: 600;
+  height: 25px;
+  position: absolute;
+  left: 1.2rem;
+  top: 0.4rem;
+  display: flex;
+}
+#message-page .container .card-footer .typing-user:nth-child(1) {
+  font-style: italic;
+}
+#message-page .container .card-footer .typing-user .dots {
+  position: absolute;
+  top: 70%;
+  left: 100%;
+  list-style: none;
+  display: flex;
+}
+#message-page .container .card-footer .typing-user .dots .dot {
+  margin: 0 0 0 0.2rem;
+  width: 3px;
+  height: 3px;
+  border-radius: 50%;
+  background-color: var(--color-gray-900);
+  --webkit-animation: bounce 0.6s infinite alternate;
+  --moz-animation: bounce 0.6s infinite alternate;
+  --o-animation: bounce 0.6s infinite alternate;
+  animation: bounce 0.45s infinite alternate;
+}
+#message-page .container .card-footer .typing-user .dots .dot:nth-child(2) {
+  animation-delay: 0.15s;
+}
+#message-page .container .card-footer .typing-user .dots .dot:nth-child(3) {
+  animation-delay: 0.3s;
+}
+@-webkit-keyframes bounce {
+  to {
+    opacity: 0.6;
+    transform: translateY(-10px);
+  }
+}
+@-moz-keyframes bounce {
+  to {
+    opacity: 0.6;
+    transform: translateY(-10px);
+  }
+}
+@-o-keyframes bounce {
+  to {
+    opacity: 0.6;
+    transform: translateY(-10px);
+  }
+}
+@keyframes bounce {
+  to {
+    opacity: 0.6;
+    transform: translateY(-3px);
+  }
+}
+#message-page .container .card-footer .btn-theme {
+  white-space: nowrap;
+}
+
 html, body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
