--- a/SiliconBackOffice/SiliconBackOffice/Components/Pages/Home.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/Pages/Home.razor
@@ -23,6 +23,15 @@
         <div class="col-md-4">
             <div class="card">
                 <div class="card-body text-center">
+                    <h5 class="card-title">Manage User Saved Courses</h5>
+                    <p class="card-text">Create, update, and delete courses with ease.</p>
+                    <a href="/savedcourses" class="btn btn-primary">Go to Saved Courses</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body text-center">
                     <h5 class="card-title">Manage Users</h5>
                     <p class="card-text">Oversee user registrations, roles, and activities.</p>
                     <a href="/users" class="btn btn-primary">Go to Users</a>
@@ -51,6 +60,7 @@
 </div>
 
 <style>
+    
     .container {
         max-width: 1000px;
     }
