--- a/SiliconBackOffice/SiliconBackOffice/Components/Pages/SavedCourses.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/Pages/SavedCourses.razor
@@ -1,8 +1,9 @@
-﻿@page "/savedCourses"
+﻿@page "/savedcourses"
 @using Microsoft.AspNetCore.Components.Forms
 
 @rendermode InteractiveServer
 @attribute [StreamRendering]
+@attribute [Authorize]
 
 <PageTitle>Saved Courses</PageTitle>
 
