--- a/SiliconBackOffice/SiliconBackOffice/Components/_Imports.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/_Imports.razor
@@ -85,11 +85,12 @@
 @using SiliconBackOffice.Models.Courses
 @using SiliconBackOffice.Components.Pages.Partials.Courses
 @using SiliconBackOffice.Services
+@using SiliconBackOffice.Factories
 @using SiliconBackOffice.Models.SavedCourses
 
 @inject CourseService _courseService
 @inject NavigationManager navigationManager
-@* @inject SavedCoursesService _savedCoursesService *@
+@inject SavedCoursesService _savedCoursesService
 
 
 @*-----------------------------Chat----------------------------------------*@
