--- a/SiliconBackOffice/SiliconBackOffice/Components/Layout/NavMenu.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/Layout/NavMenu.razor
@@ -34,6 +34,12 @@
                 </div>
 
                 <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="savedcourses">
+                        <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Saved Courses
+                    </NavLink>
+                </div>
+
+                <div class="nav-item px-3">
                     <NavLink class="nav-link" href="users">
                         <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Users
                     </NavLink>
