--- a/SiliconBackOffice/SiliconBackOffice/wwwroot/css/scss/sections/_courses_backoffice.scss
+++ b/SiliconBackOffice/SiliconBackOffice/wwwroot/css/scss/sections/_courses_backoffice.scss
@@ -16,11 +16,12 @@
             .status-wrapper {
                 display: flex;
                 gap: 1rem;
-                
+
                 .course-status {
                     background-color: var(--color-success);
                     border-radius: 0.5rem;
                     padding: 0.5rem 2rem;
+                    cursor: default;
                 }
             }
         }
@@ -57,7 +58,8 @@
 
         .grid-item {
             position: relative;
-            max-width: 420px;
+            max-width: 410px;
+            max-height: 450px;
             display: flex;
             flex-direction: column;
             border-radius: 0.5rem;
@@ -78,11 +80,16 @@
             }
 
             .img-wrapper {
+                max-width: 420px;
+                max-height: 240px;
+                overflow: hidden;
+                
+
                 .course-image {
                     width: 100%;
                     height: auto;
-                    aspect-ratio: 3.5 /2;
-                    object-fit: cover;
+                    aspect-ratio: 3.5 /2 !important;
+                    object-fit:cover;
                 }
 
                 .best-seller {
