adjusted favicon, logo and sorted page titles to be coherent across the board

--- a/SiliconBackOffice/SiliconBackOffice/Components/Account/Pages/Login.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/Account/Pages/Login.razor
@@ -1,6 +1,6 @@
 ﻿@page "/Account/Login"
 
-<PageTitle>sign in</PageTitle>
+<PageTitle>Silicon BackOffice | Sign In</PageTitle>
 
 <section class="create-account">
     <div class="container">
