--- a/SiliconBackOffice/SiliconBackOffice/Components/Account/Pages/Register.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/Account/Pages/Register.razor
@@ -1,7 +1,7 @@
 ﻿@page "/Account/Register"
 @rendermode InteractiveServer
 
-<PageTitle>sign up</PageTitle>
+<PageTitle>Silicon BackOffice | Sign Up</PageTitle>
 
 <section class="create-account">
     <div class="container">
