--- a/SiliconBackOffice/SiliconBackOffice/Components/App.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/App.razor
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="SiliconBackOffice.styles.css" />
     <link rel="stylesheet" href="app.min.css" />
     <link rel="stylesheet" href="https://kit.fontawesome.com/41c8b474e2.css">
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <script src="js/chatautoscroll.js"></script>
     <HeadOutlet />
 </head>
