--- a/SiliconBackOffice/SiliconBackOffice/Components/Pages/Courses.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/Pages/Courses.razor
@@ -4,7 +4,7 @@
 @attribute [StreamRendering]
 @attribute [Authorize]
 
-<PageTitle>Courses</PageTitle>
+<PageTitle>Silicon BackOffice | Courses</PageTitle>
 
 <section id="coursesStart" class="courses">
     <div class="container-test">
