--- a/SiliconBackOffice/SiliconBackOffice/Components/Pages/Error.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/Pages/Error.razor
@@ -1,7 +1,7 @@
 ﻿@page "/Error"
 @using System.Diagnostics
 
-<PageTitle>Error</PageTitle>
+<PageTitle>Silicon BackOffice | Error</PageTitle>
 
 <section class="not-found">
     <div class="container">
