--- a/SiliconBackOffice/SiliconBackOffice/Components/Pages/Home.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/Pages/Home.razor
@@ -5,7 +5,7 @@
 
 <div class="container mt-5">
     <div class="text-center">
-        <img src="images/logo.png" alt="Silicon Logo" class="mb-4 logo" />
+        <img src="img/IconLight.svg" alt="Silicon Logo" class="mb-4 logo" />
         <h1>Welcome to Silicon BackOffice</h1>
         <p class="lead">Backoffice system for moderating courses, users, and more.</p>
     </div>
@@ -24,7 +24,7 @@
             <div class="card">
                 <div class="card-body text-center">
                     <h5 class="card-title">Manage User Saved Courses</h5>
-                    <p class="card-text">Create, update, and delete courses with ease.</p>
+                    <p class="card-text">Hande User Saved Courses.</p>
                     <a href="/savedcourses" class="btn btn-primary">Go to Saved Courses</a>
                 </div>
             </div>
