--- a/SiliconBackOffice/SiliconBackOffice/Components/Pages/SavedCourses.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/Pages/SavedCourses.razor
@@ -5,7 +5,7 @@
 @attribute [StreamRendering]
 @attribute [Authorize]
 
-<PageTitle>Saved Courses</PageTitle>
+<PageTitle>Silicon BackOffice | Saved Courses</PageTitle>
 
 <h1>Saved courses</h1>
     <EditForm Model="@_email">
