--- a/SiliconBackOffice/SiliconBackOffice/Components/Pages/Users.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/Pages/Users.razor
@@ -3,7 +3,7 @@
 @inject UserService UserService
 @rendermode InteractiveServer
 @attribute [StreamRendering]
-<PageTitle>Users</PageTitle>
+<PageTitle>Silicon BackOffice | Users</PageTitle>
 
 <section class="users">
     <div class="container mt-5">
