--- a/SiliconBackOffice/SiliconBackOffice/Components/Pages/Subscribers.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/Pages/Subscribers.razor
@@ -4,7 +4,7 @@
 @rendermode InteractiveServer
 @attribute [StreamRendering]
 
-<PageTitle>Subscribers</PageTitle>
+<PageTitle>Silicon BackOffice | Subscribers</PageTitle>
 
 <section class="subscribers">
     <div class="container mt-5">
