--- a/SiliconBackOffice/SiliconBackOffice/Components/App.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/App.razor
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="app.min.css" />
     <link rel="stylesheet" href="https://kit.fontawesome.com/41c8b474e2.css">
     <link rel="icon" type="image/png" href="favicon.png" />
-    <script src="js/chatautoscroll.js"></script>
+    @* <script src="js/chatautoscroll.js"></script> *@
+   
     <HeadOutlet />
 </head>
 
 <body id="top">
     <Routes />
-    <script src="_framework/blazor.web.js"></script>
 </body>
 
 </html>
