--- a/SiliconBackOffice/SiliconBackOffice/wwwroot/css/scss/sections/_chat.scss
+++ b/SiliconBackOffice/SiliconBackOffice/wwwroot/css/scss/sections/_chat.scss
@@ -39,12 +39,16 @@
         }
 
         .message-container {
-            max-height: 60vh;
+            height: 500px;
             overflow-y: scroll;
+            scroll-behavior: revert;
+            //overflow-y: scroll;
 
             .list-group {
                 min-height: 100px;
-                padding: 0 0 0 1rem;
+                padding: 0 0 10rem 1rem;
+                //overflow-y: auto;
+                s//croll-behavior: revert-layer;
 
                 .message-user-name {
                     padding: 0 0 0 1rem;
