can get it to work.

--- a/SiliconBackOffice/SiliconBackOffice/Components/_Imports.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/_Imports.razor
@@ -95,4 +95,4 @@
 
 @*-----------------------------Chat----------------------------------------*@
 
-@using SiliconBackOffice.Client.Pages.Chat
+@using SiliconBackOffice.Client.Pages.BlazorChat
