--- a/SiliconBackOffice/SiliconBackOffice.Client/_Imports.razor
+++ b/SiliconBackOffice/SiliconBackOffice.Client/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using SiliconBackOffice.Client
+
+@inject NavigationManager navigationManager
