--- a/SiliconBackOffice/SiliconBackOffice/Components/Layout/NavMenu.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/Layout/NavMenu.razor
@@ -19,7 +19,7 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="chat">
+            <NavLink class="nav-link" href="chatroom">
                 <span class="bi bi-chat-dots-fill-nav-menu" aria-hidden="true"></span> Chat
             </NavLink>
         </div>
